fixing register header align

--- a/front-end/src/components/Register.css
+++ b/front-end/src/components/Register.css
@@ -1,3 +1,7 @@
 .error {
     color: red;
 }
+
+.register-header {
+    text-align: center;
+}
